small fix in styles to remove horizontal scroll

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -123,6 +123,6 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
-/* * {
+* {
     outline: 1px solid red !important;
-} */
+}
